tests/hole_top_level_var_bad.stderr
tests/hole_top_level_var_bad.hop:2:5: error: HOP2007: identifier '_' is reserved
