tests/hole_top_level_var_bad.hop
// Verifies hole top-level level variable is rejected.
var _ = 1
